# twitter_clone

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.cursor/rules/: full-stack.mdc  instructions.mdc
apps/core/: middleware.py  views.py
apps/tweets/: forms.py  models.py  serializers.py  urls.py  views.py
apps/tweets/management/commands/: generate_fake_tweets.py
apps/tweets/migrations/: 0001_initial.py  0002_alter_tweet_content.py  0003_tweet_likes.py
apps/tweets/utils/: fake_data.py
apps/users/: forms.py  models.py  views.py
apps/users/migrations/: 0001_initial.py
backend/: .env.dev  db.sqlite3  pyproject.toml
backend/login/: urls.py
backend/login/models/: user_model.py
backend/login/serializers/: reset_password_serializer.py  user_serializer.py
backend/login/viewsets/: reset_password_email_views.py  reset_password_views.py  user_views.py
backend/tweets/viewsets/: tweets_viewset.py
backend/twitter_clone/: settings.py  urls.py
frontend/twitter_clone/: package-lock.json  package.json
staticfiles/css/: custom.css  feed.css
staticfiles/js/: alertAutoHide.js
templates/: base.html  base_auth.html  search.html
templates/account/: login.html  logout.html  password_reset.html  password_reset_done.html  signup.html  user_list.html
templates/includes/: right_sidebar.html  sidebar.html
templates/partials/: search_results.html
templates/tweets/: auto_feed.html  feed.html
templates/tweets/partials/: tweet.html  tweet_list.html  tweet_response.html
twitterclone/: settings.py  urls.py
(+9 files in other folders)
