[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = "A simple Twitter clone using Django and DRF"
authors = ["Rodrigo Cinelli <rodcinelli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
black = "^24.10.0"
factory-boy = "^3.3.1"
pytest = "^8.3.4"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"
django-debug-toolbar = "^5.0.1"
psycopg2-binary = "^2.9.10"
flake8 = "^7.1.1"
whitenoise = "^6.8.2"
gunicorn = "^23.0.0"
django-crispy-forms = "^2.3"
django-htmx = "^1.22.0"
crispy-bootstrap5 = "^2024.10"
pillow = "^11.1.0"
django-allauth = "^65.4.1"
pyjwt = "^2.10.1"
cryptography = "^44.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
